-ISplitPanel classname convention changes. -IWindow themed, changes to size calculations and HTML structure. -New Util function, isIE6. -Small style fixes to common.css, select.css and progressindicator.css -IFilterSelect styles changed a bit, now works more reliably with wider widths. -ISplitPanel styles redone. -Windowing test now only for inline window testing, new test for native windowing test -> TestForNativeWindowing.java
svn changeset:2515 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/progressindicator/progressindicator.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/progressindicator/progressindicator.css
@@ -2,9 +2,11 @@
 	background: #dfe2e4 url(img/base.gif);
 	height: 9px;
 	border: 1px solid #b6bbbc;
+	overflow: hidden; /* for IE6 */
 }
 
 .i-progressindicator div {
 	background: #f7f9f9 url(img/progress.png);
 	height: 9px;
+	overflow: hidden; /* for IE6 */
 }
