--- a/WebContent/ITMILL/themes/reservr/styles.css
+++ b/WebContent/ITMILL/themes/reservr/styles.css
@@ -4,6 +4,8 @@ body {
 	background-image: url(bmw.jpg);
 	background-repeat: no-repeat;
 	background-position: top right;
+	margin: 0;
+	padding: 20px 25px 55px 25px;
 }
 #itmill-ajax-window {
 	background-color: transparent;	
@@ -33,8 +35,8 @@ body {
 	height: 250px;
 	overflow: auto;
 }
-.i-panel {
-	xmargin: 5px;
+.i-datefield-calendarpanel {
+	width: 20em;
 }
 .i-caption {
 	color: #F14C1A;
@@ -45,11 +47,13 @@ body {
 	font-family: Times New Roman;
 	color: #F14C1A;
 	font-size: 65px;
+	margin: 0 20px 0 12px;
 }
 textarea.i-textfield {
 	font-size: 13px;
 	width: 320px;
 	height: 110px;
+	margin-right: 30px;
 }
 .i-button-link {
 	border: 0px;
@@ -68,15 +72,15 @@ textarea.i-textfield {
 	border: 0px;
 	text-align: left;
 	text-decoration: none;
-	background: #183C6B;
+	background: #5daee8;
 	font-weight: bold;
-	color: white;
+	color: #fff;
 }
 .i-orderedlayout {
 	margin:0px;
 	padding: 0px;
 }
 
-.i-orderedlayout TD {
+.i-orderedlayout td {
 	vertical-align: top;
 }
