--- a/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
@@ -93,7 +93,8 @@
 	padding-top: 14px;
 }
 
-.i-panel-caption-light:before {
+.i-panel-caption-light:before,
+.i-panel-nocaption-light:before {
 	display: none;
 }
 
