-Small fix to window styles (IE). -Panel height calculation refined, now it won't add the extragenous style attribute to the outmost DOM element.
svn changeset:2601 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
@@ -180,6 +180,12 @@
 	background: #c1c6cc;
 	border: none;
 }
+*+html .i-panel-nocaption {
+	height: 1px;
+	overflow: hidden;
+	background: #c1c6cc;
+	border: none;
+}
 
 /* Without padding */
 * html .i-panel-content-nopad {
