--- a/src/com/itmill/toolkit/terminal/gwt/public/default/window/window.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/window/window.css
@@ -129,6 +129,13 @@
 	background: #fff;
 }
 
+* html .i-window-footer {
+	margin-bottom: 0;
+}
+*+html .i-window-footer {
+	margin-bottom: 0;
+}
+
 * html .i-window-resizebox {
 	bottom: 0;
 	width: 22px;
