IPanel height calculations altered (yet again). Seems to work more consistently across all browsers than previous (commented) version.
svn changeset:2619 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
@@ -167,10 +167,12 @@
 }
 
 * html .i-panel-deco {
-	display: none;
+	height: 0;
+	overflow: hidden;
 }
 *+html .i-panel-deco {
-	display: none;
+	height: 0;
+	overflow: hidden;
 }
 
 /* Without caption */
